# Itera

./: CMakeLists.txt  README.md
include/: common.h
include/game/: pong.h
include/genetics/: evolution.h
include/math/: functions.h  matrix.h
include/network/: denselayer.h  neuralnetwork.h
src/: main.cpp
